fix: horizontal scroll issue

--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 100vw;
+  width: 100%;
   max-width: 1440px;
   margin: {
     left: auto;
